[gd_scene format=3 uid="uid://cp0knxexve0vr"]

[ext_resource type="Script" uid="uid://bdgup2hsmf657" path="res://game/menus/main_menu.gd" id="1_06t4h"]
[ext_resource type="Theme" uid="uid://b1am05jpxcybj" path="res://game/theme/main_theme.tres" id="2_tfb2k"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_tfb2k"]
color = Color(0.59717613, 0.59717613, 0.5971761, 1)
thickness = 5

[node name="MainMenu" type="CanvasLayer" unique_id=1131729515]
script = ExtResource("1_06t4h")

[node name="MainMenu" type="Control" parent="." unique_id=134567037]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_tfb2k")

[node name="ColorRect" type="ColorRect" parent="MainMenu" unique_id=1350728398]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CreditsContainer" type="MarginContainer" parent="MainMenu" unique_id=904615075]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -338.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="Credits" type="Label" parent="MainMenu/CreditsContainer" unique_id=1268968465]
layout_mode = 2
size_flags_vertical = 1
text = "Credits:
Travis Constantino (Designer)
Mina <lastname> (3D Art)
Page <lastname> (2D Art/Textures)
Baily <lastname> (Music/SFX)
Sean LaPlante (Game Programmer)
Ashley <lastname> (Game Programmer)
"

[node name="MenuButtonContainer" type="CenterContainer" parent="MainMenu" unique_id=122137858]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MenuButtonContainer" unique_id=1854547269]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Title" type="Label" parent="MainMenu/MenuButtonContainer/VBoxContainer" unique_id=1426670827]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 47
text = "Face Lift"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MainMenu/MenuButtonContainer/VBoxContainer" unique_id=968777676]
layout_mode = 2
theme_override_constants/separation = 15
theme_override_styles/separator = SubResource("StyleBoxLine_tfb2k")

[node name="Play Button" type="Button" parent="MainMenu/MenuButtonContainer/VBoxContainer" unique_id=1152234546]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Play"

[node name="Exit Button" type="Button" parent="MainMenu/MenuButtonContainer/VBoxContainer" unique_id=1185375885]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"

[node name="Control" type="Control" parent="MainMenu/MenuButtonContainer/VBoxContainer" unique_id=1430054340]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/MenuButtonContainer/VBoxContainer" unique_id=1813242665]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Don't let them
finish the tower!!"
horizontal_alignment = 1

[node name="AR_Label" type="Label" parent="MainMenu" unique_id=129158696]
layout_mode = 0
offset_left = 59.0
offset_top = 81.0
offset_right = 351.0
offset_bottom = 206.0
text = "AR Mode"
horizontal_alignment = 1

[node name="AR_on" type="Button" parent="MainMenu" unique_id=180041923]
layout_mode = 0
offset_left = 47.0
offset_top = 122.0
offset_right = 173.0
offset_bottom = 168.0
text = "On"

[node name="AR_off" type="Button" parent="MainMenu" unique_id=274889551]
layout_mode = 0
offset_left = 191.0
offset_top = 121.0
offset_right = 317.0
offset_bottom = 169.0
text = "Off"

[connection signal="pressed" from="MainMenu/MenuButtonContainer/VBoxContainer/Play Button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/MenuButtonContainer/VBoxContainer/Exit Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MainMenu/AR_on" to="." method="_on_ar_on_pressed"]
[connection signal="pressed" from="MainMenu/AR_off" to="." method="_on_ar_off_pressed"]
